# yihuan-auto-fishing

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
doc/: 验收标准.md
doc/进展记录/: 2026-7-10.md  2026-7-11.md  2026-7-12.md  2026-7-13.md  2026-7-14.md  2026-7-15.md
docs/superpowers/plans/: 2026-07-10-auto-fishing.md  2026-07-11-on-screen-keyboard-input.md  2026-07-11-runtime-logging.md  2026-07-11-start-countdown.md  2026-07-12-input-jitter-layout.md  2026-07-12-progress-completion-transition.md  2026-07-12-progress-slot-reconstruction.md  2026-07-13-adaptive-progress-width.md  2026-07-13-multiround-resilience-auto-activation.md  2026-07-13-recency-weighted-progress-control.md  2026-07-13-result-dismiss-retry.md  2026-07-14-d-drive-storage-quota.md  2026-07-14-extreme-marker-tracking.md  2026-07-14-incremental-log-pruning.md  2026-07-14-progress-entry-restart-round.md  2026-07-14-quota-write-scan.md  2026-07-14-v2-portable-diagnostics.md  2026-07-15-gold-settlement-cast-guard.md  (+3 more)
packaging/: app.manifest  auto_fishing.spec  auto_fishing_v2.spec
scripts/: build.ps1  build_v2.ps1  verify_release.py
src/auto_fishing/: __main__.py  __main_v2__.py  app.py  model.py  product.py
try/: smoke_exe.ps1
try/tests/: test_capture_window.py  test_engine.py  test_geometry.py  test_on_screen_keyboard.py  test_packaging.py  test_progress.py  test_safe_input.py  test_scenes.py  test_state_machine.py  test_storage.py  test_ui_smoke.py  test_v2_diagnostics.py
try/tools/: extract_progress_fixture.py
(+39 files in other folders)
