[build-system]
requires = ["setuptools>=80,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "n-te-auto-fishing"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "dxcam==0.3.0",
  "numpy==2.4.1",
  "opencv-python-headless==4.13.0.92",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["try/tests"]
pythonpath = ["src"]
